--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "test": "yarn _mocha --timeout 0"
   },
   "dependencies": {
+    "@harmony-js/core": "^0.1.57",
+    "@truffle/contract": "^4.3.21",
+    "@truffle/hdwallet-provider": "^1.4.1",
     "@zeit/ncc": "^0.22.3",
     "aws-sdk": "^2.883.0",
     "ethereumjs-wallet": "0.6.5",
@@ -11,6 +14,7 @@
     "jssha": "^3.2.0",
     "merkletreejs": "^0.2.18",
     "node-uuid": "^1.4.8",
+    "openzeppelin-solidity": "3.4.0",
     "totp-generator": "0.0.9",
     "truffle-assertions": "^0.9.2",
     "truffle-wallet-provider": "^0.0.5",
