--- a/webclient/package.json
+++ b/webclient/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@ramonak/react-progress-bar": "^3.1.0",
     "@truffle/contract": "^4.1.1",
     "b32": "^0.2.0",
@@ -38,7 +40,9 @@
     "prop-types": "^15.7.2",
     "pseudomap": "^1.0.2",
     "qrcode": "^1.4.4",
-    "react": "^17.0.2",
+    "react": "^16.0.2",
+    "react-dom": "^16.0.2",
+    "react-otp-input": "^2.3.1",
     "schema-utils": "^1.0.0",
     "thirty-two": "^1.0.2",
     "totp-generator": "^0.0.9",
