--- a/webclient/package.json
+++ b/webclient/package.json
@@ -51,6 +51,7 @@
     "typescript": "^4.2.4",
     "unorm": "^1.6.0",
     "web3": "^1.3.5",
+    "web3-utils": "^1.3.6",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.11.2",
     "xmlhttprequest": "^1.8.0"
