--- a/webclient/package.json
+++ b/webclient/package.json
@@ -21,6 +21,7 @@
     "@babel/polyfill": "^7.7.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@harmony-js/crypto": "^0.1.56",
     "@ramonak/react-progress-bar": "^3.1.0",
     "@truffle/contract": "^4.1.1",
     "b32": "^0.2.0",
