--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@harmony-js/core": "^0.1.57",
+    "@harmony-js/crypto": "^0.1.56",
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
     "@zeit/ncc": "^0.22.3",
@@ -15,10 +16,13 @@
     "merkletreejs": "^0.2.18",
     "node-uuid": "^1.4.8",
     "openzeppelin-solidity": "3.4.0",
+    "react": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "totp-generator": "0.0.9",
     "truffle-assertions": "^0.9.2",
     "truffle-wallet-provider": "^0.0.5",
     "web3": "^1.3.5",
-    "web3-eth-abi": "^1.3.5"
+    "web3-eth-abi": "^1.3.5",
+    "web3-eth-accounts": "^1.3.6"
   }
 }
