--- a/webclient/package.json
+++ b/webclient/package.json
@@ -43,7 +43,9 @@
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
+    "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
+    "react-toast-notifications": "^2.4.4",
     "schema-utils": "^1.0.0",
     "thirty-two": "^1.0.2",
     "totp-generator": "^0.0.9",
@@ -52,6 +54,8 @@
     "typescript": "^4.2.4",
     "unorm": "^1.6.0",
     "web3": "^1.3.5",
+    "web3-eth-accounts": "^1.3.6",
+    "web3-eth-contract": "^1.3.6",
     "web3-utils": "^1.3.6",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.11.2",
