--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@truffle/hdwallet-provider": "^1.4.1",
     "@zeit/ncc": "^0.22.3",
     "aws-sdk": "^2.883.0",
+    "eth-ens-namehash": "^2.0.8",
     "ethereumjs-wallet": "0.6.5",
     "ethers": "^5.1.0",
     "jssha": "^3.2.0",
@@ -18,11 +19,13 @@
     "openzeppelin-solidity": "3.4.0",
     "react": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "redux-zero": "^5.1.7",
     "totp-generator": "0.0.9",
     "truffle-assertions": "^0.9.2",
     "truffle-wallet-provider": "^0.0.5",
     "web3": "^1.3.5",
     "web3-eth-abi": "^1.3.5",
-    "web3-eth-accounts": "^1.3.6"
+    "web3-eth-accounts": "^1.3.6",
+    "web3-utils": "^1.3.6"
   }
 }
