--- a/webclient/package.json
+++ b/webclient/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode development --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "copy-webpack-plugin": "^5.0.5",
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
+    "gh-pages": "^3.2.3",
     "graceful-fs": "^4.1.11",
     "json-file": "^0.1.0",
     "jsonfile": "^4.0.0",
