--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
     "aws-sdk": "^2.883.0",
+    "axios": "^0.21.1",
+    "commander": "8",
     "eth-ens-namehash": "^2.0.8",
     "ethereumjs-wallet": "0.6.5",
     "ethers": "^5.1.0",
+    "fast-sha256": "^1.3.0",
+    "ganache-core": "^2.13.2",
     "jssha": "^3.2.0",
     "merkletreejs": "^0.2.18",
+    "nanotimer": "^0.3.15",
+    "node-fetch": "^2.6.1",
     "node-uuid": "^1.4.8",
     "openzeppelin-solidity": "3.4.0",
+    "prompt-sync": "^4.2.0",
+    "qrcode-terminal": "^0.12.0",
     "react": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "redux-zero": "^5.1.7",
+    "sha3": "^2.1.4",
+    "thirty-two": "^1.0.2",
     "totp-generator": "0.0.9",
     "truffle-assertions": "^0.9.2",
     "truffle-wallet-provider": "^0.0.5",
-    "web3": "^1.3.5",
+    "web3": "^1.4.0",
     "web3-eth-abi": "^1.3.5",
     "web3-eth-accounts": "^1.3.6",
     "web3-utils": "^1.3.6"
