--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
     "store-server": "cd 2fa-store-api && node -e 'require(\"./index.js\").server()'",
     "test": "yarn _mocha --timeout 0"
   },
+  "name": "@hashmesan/smartvault",
+  "homepage": "https://github.com/hashmesan/harmony-totp",
+  "version": "0.1.2",
+  "license": "GPL-3.0",
+  "bin": { "smartvault": "cli/smartvault.js"},
   "dependencies": {
     "@harmony-js/core": "^0.1.57",
     "@harmony-js/crypto": "^0.1.56",
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
-    "aws-sdk": "^2.883.0",
     "axios": "^0.21.1",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "commander": "8",
     "eth-ens-namehash": "^2.0.8",
-    "ethereumjs-wallet": "0.6.5",
     "ethers": "^5.1.0",
     "fast-sha256": "^1.3.0",
     "ganache-core": "^2.13.2",
@@ -24,9 +29,6 @@
     "openzeppelin-solidity": "3.4.0",
     "prompt-sync": "^4.2.0",
     "qrcode-terminal": "^0.12.0",
-    "react": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "redux-zero": "^5.1.7",
     "sha3": "^2.1.4",
     "thirty-two": "^1.0.2",
     "totp-generator": "0.0.9",
