--- a/webclient/package.json
+++ b/webclient/package.json
@@ -43,6 +43,8 @@
     "pseudomap": "^1.0.2",
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
+    "react-router-dom": "^5.2.0",
+    "redux-zero": "^5.1.7",
     "react-dom": "^16.0.2",
     "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
