--- a/webclient/package.json
+++ b/webclient/package.json
@@ -32,6 +32,7 @@
     "fs": "0.0.1-security",
     "gh-pages": "^3.2.3",
     "graceful-fs": "^4.1.11",
+    "html-webpack-plugin": "^4.5.2",
     "json-file": "^0.1.0",
     "jsonfile": "^4.0.0",
     "jsqr": "^1.2.0",
@@ -43,12 +44,12 @@
     "pseudomap": "^1.0.2",
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
-    "react-router-dom": "^5.2.0",
-    "redux-zero": "^5.1.7",
     "react-dom": "^16.0.2",
     "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
+    "react-router-dom": "^5.2.0",
     "react-toast-notifications": "^2.4.4",
+    "redux-zero": "^5.1.7",
     "schema-utils": "^1.0.0",
     "thirty-two": "^1.0.2",
     "totp-generator": "^0.0.9",
@@ -60,7 +61,7 @@
     "web3-eth-accounts": "^1.3.6",
     "web3-eth-contract": "^1.3.6",
     "web3-utils": "^1.3.6",
-    "webpack": "^4.41.2",
+    "webpack": "4.41.2",
     "webpack-dev-server": "^3.11.2",
     "xmlhttprequest": "^1.8.0"
   }
