--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "homepage": "https://github.com/hashmesan/harmony-totp",
   "version": "0.1.4",
   "license": "GPL-3.0",
-  "bin": { "smartvault": "cli/smartvault.js"},
+  "bin": {
+    "smartvault": "cli/smartvault.js"
+  },
   "dependencies": {
     "@harmony-js/core": "^0.1.57",
     "@harmony-js/crypto": "^0.1.56",
+    "@openzeppelin/contracts": "^4.2.0",
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
     "axios": "^0.21.1",
