--- a/.github/workflows/webclient.yml
+++ b/.github/workflows/webclient.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
+      - run: yarn install
         working-directory: ./webclient
       - run: yarn build
         working-directory: ./webclient
