HRC20 & HRC 721 support  #33

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
     "axios": "^0.21.1",
+    "bn-chai": "^1.0.1",
+    "bn.js": "^5.2.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commander": "8",
