add viper-sdk for testing

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@openzeppelin/contracts": "^4.2.0",
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
+    "@venomswap/sdk": "^1.1.2",
     "axios": "^0.21.1",
     "bn-chai": "^1.0.1",
     "bn.js": "^5.2.0",
