updated to bootstrap 5, no more jquery!!!

--- a/webclient/package.json
+++ b/webclient/package.json
@@ -22,11 +22,17 @@
     "@babel/polyfill": "^7.7.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@harmony-js/crypto": "^0.1.56",
     "@ramonak/react-progress-bar": "^3.1.0",
     "@truffle/contract": "^4.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "bip39": "^2.5.0",
+    "bootstrap": "5.0.2",
     "copy-webpack-plugin": "^5.0.5",
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
@@ -44,6 +50,7 @@
     "pseudomap": "^1.0.2",
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^16.0.2",
     "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
