--- a/webclient/package.json
+++ b/webclient/package.json
@@ -45,6 +45,7 @@
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
+    "react-icons": "^4.2.0",
     "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
     "react-router-dom": "^5.2.0",
