--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "store-server": "cd 2fa-store-api && node -e 'require(\"./index.js\").server()'",
-    "test": "yarn _mocha --timeout 0"
+    "test": "_mocha test --timeout 0"
   },
   "name": "@hashmesan/smartvault",
   "homepage": "https://github.com/hashmesan/harmony-totp",
@@ -11,6 +11,7 @@
     "smartvault": "cli/smartvault.js"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.2.1",
     "@harmony-js/core": "^0.1.57",
     "@harmony-js/crypto": "^0.1.56",
     "@openzeppelin/contracts": "^4.2.0",
