--- a/webclient/package.json
+++ b/webclient/package.json
@@ -16,6 +16,10 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.7",
+    "sass": "^1.38.1",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
@@ -27,6 +31,8 @@
     "@truffle/contract": "^4.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "bip39": "^2.5.0",
+    "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "copy-webpack-plugin": "^5.0.5",
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
