--- a/webclient/package.json
+++ b/webclient/package.json
@@ -49,6 +49,7 @@
     "react-otp-input": "^2.3.1",
     "react-router-dom": "^5.2.0",
     "react-toast-notifications": "^2.4.4",
+    "react-use-clipboard": "^1.0.7",
     "redux-zero": "^5.1.7",
     "schema-utils": "^1.0.0",
     "thirty-two": "^1.0.2",
