--- a/webclient/package.json
+++ b/webclient/package.json
@@ -38,6 +38,7 @@
     "jsqr": "^1.2.0",
     "jssha": "^3.2.0",
     "lodash": "^4.17.10",
+    "moment": "^2.29.1",
     "node-2fa": "^2.0.2",
     "otplib": "^12.0.1",
     "prop-types": "^15.7.2",
