--- a/webclient/package.json
+++ b/webclient/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.13.15",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
@@ -35,6 +36,7 @@
     "bootstrap-icons": "^1.5.0",
     "copy-webpack-plugin": "^5.0.5",
     "crypto": "^1.0.1",
+    "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
     "gh-pages": "^3.2.3",
     "graceful-fs": "^4.1.11",
@@ -50,6 +52,7 @@
     "pseudomap": "^1.0.2",
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
+    "react-country-region-selector": "^3.3.0",
     "react-dom": "^16.0.2",
     "react-icons": "^4.2.0",
     "react-notify-toast": "^0.5.1",
