--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "web3-eth-abi": "^1.3.5",
     "web3-eth-accounts": "^1.3.6",
     "web3-utils": "^1.3.6"
+  },
+  "devDependencies": {
+    "git-revision-webpack-plugin": "^5.0.0"
   }
 }
