--- a/webclient/package.json
+++ b/webclient/package.json
@@ -16,6 +16,7 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@popperjs/core": "^2.10.1",
     "babel-loader": "^8.2.2",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^5.0.5",
