--- a/webclient/package.json
+++ b/webclient/package.json
@@ -37,7 +37,7 @@
     "@harmony-js/crypto": "^0.1.56",
     "@truffle/contract": "^4.1.1",
     "bip39": "^2.5.0",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "5.1.0",
     "bootstrap-icons": "^1.5.0",
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
