--- a/webclient/package.json
+++ b/webclient/package.json
@@ -5,7 +5,7 @@
   "main": "client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --mode development --config webpack.config.js",
+    "dev": "webpack-dev-server --mode development --config webpack.config.js --host 0.0.0.0",
     "build": "rm -rf dist/ && webpack --mode production --config webpack.config.js"
   },
   "author": "",
