--- a/webclient/package.json
+++ b/webclient/package.json
@@ -46,6 +46,7 @@
     "jsonfile": "^4.0.0",
     "jsqr": "^1.2.0",
     "jssha": "^3.2.0",
+    "lightweight-charts": "^3.6.1",
     "lodash": "^4.17.10",
     "moment": "^2.29.1",
     "node-2fa": "^2.0.2",
