--- a/webclient/package.json
+++ b/webclient/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "5.1.0",
     "bootstrap-icons": "^1.5.0",
     "crypto": "^1.0.1",
+    "firebase": "^9.0.2",
     "fs": "0.0.1-security",
     "graceful-fs": "^4.1.11",
     "json-file": "^0.1.0",
