--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@harmony-js/core": "^0.1.57",
     "@harmony-js/crypto": "^0.1.56",
     "@openzeppelin/contracts": "^4.3.1",
+    "@sushiswap/sdk": "^5.0.0-canary.72",
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
     "@venomswap/sdk": "^1.1.2",
@@ -23,6 +24,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commander": "8",
+    "eip-712": "^0.4.3",
     "eth-ens-namehash": "^2.0.8",
     "ethers": "^5.1.0",
     "fast-sha256": "^1.3.0",
@@ -46,6 +48,11 @@
     "web3-utils": "^1.3.6"
   },
   "devDependencies": {
-    "git-revision-webpack-plugin": "^5.0.0"
+    "@types/expect": "^1.20.4",
+    "@types/mocha": "^9.0.0",
+    "git-revision-webpack-plugin": "^5.0.0",
+    "mocha": "^9.1.1",
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.4.3"
   }
 }
