undo some commit changes, only commit work on theme, send payment, typescript, theming

--- a/webclient/package.json
+++ b/webclient/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@types/react": "^17.0.21",
     "babel-loader": "^8.2.2",
     "webpack-cli": "^3.3.10"
   },
@@ -23,12 +24,18 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@harmony-js/crypto": "^0.1.56",
+    "@mantine/core": "^2.4.3",
+    "@mantine/dates": "^2.4.3",
+    "@mantine/hooks": "^2.4.3",
+    "@mantine/notifications": "^2.4.3",
+    "@mantine/prism": "^2.4.3",
     "@ramonak/react-progress-bar": "^3.1.0",
     "@truffle/contract": "^4.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "bip39": "^2.5.0",
     "copy-webpack-plugin": "^5.0.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.10.7",
     "fs": "0.0.1-security",
     "gh-pages": "^3.2.3",
     "graceful-fs": "^4.1.11",
@@ -41,11 +48,13 @@
     "moment": "^2.29.1",
     "node-2fa": "^2.0.2",
     "otplib": "^12.0.1",
+    "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "pseudomap": "^1.0.2",
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
+    "react-jss": "^10.7.1",
     "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
     "react-router-dom": "^5.2.0",
