--- a/webclient/tsconfig.json
+++ b/webclient/tsconfig.json
@@ -1,11 +1,14 @@
 {
-    "compilerOptions": {
-      "target": "es3",
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitReturns": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "esModuleInterop": true
-    }
+  "compilerOptions": {
+    "outDir": "./dist/",
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "module": "es6",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop" : true
   }
+}
