--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@harmony-js/core": "^0.1.57",
     "@harmony-js/crypto": "^0.1.56",
+    "@harmony-js/utils": "^0.1.56",
     "@openzeppelin/contracts": "^4.3.1",
     "@sushiswap/sdk": "^5.0.0-canary.72",
     "@truffle/contract": "^4.3.21",
