--- a/webclient/package.json
+++ b/webclient/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-react": "^7.13.13",
     "@types/react": "^17.0.21",
     "babel-loader": "^8.2.2",
+    "css-loader": "^4.3.0",
+    "style-loader": "^3.2.1",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
@@ -29,8 +31,11 @@
     "@mantine/hooks": "^2.4.3",
     "@mantine/notifications": "^2.4.3",
     "@mantine/prism": "^2.4.3",
+    "@modulz/radix-icons": "^4.0.0",
+    "@radix-ui/react-icons": "^1.0.3",
     "@ramonak/react-progress-bar": "^3.1.0",
     "@truffle/contract": "^4.1.1",
+    "@types/react-router-dom": "^5.1.9",
     "babel-preset-stage-0": "^6.24.1",
     "bip39": "^2.5.0",
     "copy-webpack-plugin": "^5.0.5",
@@ -54,6 +59,7 @@
     "qrcode": "^1.4.4",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
+    "react-icons": "^4.2.0",
     "react-jss": "^10.7.1",
     "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
