--- a/webclient/package.json
+++ b/webclient/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.11",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@harmony-js/crypto": "^0.1.56",
@@ -43,6 +44,7 @@
     "firebase": "^9.0.2",
     "fs": "0.0.1-security",
     "graceful-fs": "^4.1.11",
+    "graphql": "^15.5.3",
     "json-file": "^0.1.0",
     "jsonfile": "^4.0.0",
     "jsqr": "^1.2.0",
