--- a/webclient/package.json
+++ b/webclient/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.38.1",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.10",
