--- a/webclient/package.json
+++ b/webclient/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^5.2.7",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
+    "http-server": "^13.0.2",
     "sass": "^1.38.1",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
