--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "thirty-two": "^1.0.2",
     "totp-generator": "0.0.9",
     "truffle-assertions": "^0.9.2",
+    "truffle-contract-size": "^2.0.1",
     "truffle-wallet-provider": "^0.0.5",
     "web3": "^1.4.0",
     "web3-eth-abi": "^1.3.5",
