indexer keep track  of balance, upsert, added api to relayer

--- a/relayer/package.json
+++ b/relayer/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "node -e 'require(\"./index.js\").server()'",
+    "run_indexer": "node run_indexer.js",
     "test": "mocha --timeout 15000"
   },
   "author": "",
