--- a/relayer/package.json
+++ b/relayer/package.json
@@ -24,6 +24,7 @@
     "jssha": "^3.2.0",
     "merkletreejs": "^0.2.18",
     "node-uuid": "^1.4.8",
+    "pino-http": "^6.0.0",
     "request-promise-native": "^1.0.9",
     "sqlite3": "^5.0.2",
     "web3": "^1.3.5",
